--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "joi": "^14.3.1",
+    "mdbootstrap": "^4.7.3",
     "mongoose": "^5.4.10"
   }
 }
